# cmake-ppc-sparc-elf-issue

./: .gitignore  CMakeLists.txt  README.mkd  powerpc.toolchain.cmake  sparc.toolchain.cmake
